fixed gap in wave-top

--- a/css/about.css
+++ b/css/about.css
@@ -10,6 +10,7 @@
     position: relative;
     height: auto;
     width: 100vw;
+    padding: 1rem 2rem;
     
 }
 #about .aboutMeContent{
