--- a/css/fonts.css
+++ b/css/fonts.css
@@ -41,7 +41,7 @@ h1.hero-name {
     font-weight: lighter;
 }
 h1.cursive-heading {
-    font-size: 5.5rem;
+    font-size: 4.5rem;
     margin-bottom: 1rem;
     font-family: 'Southam Demo';
     font-weight: lighter;
